# simplepy

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  test.py
.github/workflows/: codeql-analysis.yml
examples/: guess.py  rps.py
examples/games/: guess.py  rps_ai.py  rps_user.py
games/: __init__.py  guess.py  guess_the_number.py  rps.py
guess-the-number/: main.py
modmail/: __init__.py  open.py
simplepy/: __init__.py  convert.py  get.py  percent.py
simplepy/games/: __init__.py  guess_the_number.py  rock_paper_scissors.py
simplepy/math/: __init__.py  percent.py
simplepy/percent/: percent.py  used.py
