[metadata]
name = modmail
version = 0.1.0
author = Kevys
description = A modmail bot for discord servers. A good way for members to contact the staff if they need help with something.
long_description = README.md
long_description_content_type = text/markdown
url = https://github.com/Kevys/modmail
long_description='Really, the funniest around.',
classifiers = 
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3
include_package_data = True