[metadata]
name = guess the number
version = 1.1.0
author = Kevys
description = A very simple program where you can try to guess the right number. This is just something i made fast for my school project.
long_description = README.md
long_description_content_type = text/markdown
url = https://github.com/Kevys/guess-the-number
classifiers = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3
include_package_data = True